tests/baselines/reference/classExpression.errors.txt
tests/cases/conformance/classes/classExpression.ts(1,15): error TS9003: 'class' expressions are not currently supported.
tests/cases/conformance/classes/classExpression.ts(5,16): error TS9003: 'class' expressions are not currently supported.
tests/cases/conformance/classes/classExpression.ts(10,19): error TS9003: 'class' expressions are not currently supported.


==== tests/cases/conformance/classes/classExpression.ts (3 errors) ====
    var x = class C {
                  ~
!!! error TS9003: 'class' expressions are not currently supported.
    }
    
    var y = {
        foo: class C2 {
                   ~~
!!! error TS9003: 'class' expressions are not currently supported.
        }
    }
    
    module M {
        var z = class C4 {
                      ~~
!!! error TS9003: 'class' expressions are not currently supported.
        }
    }